# asupersync_ansi_c

./: .gitignore  CMakeLists.txt  Makefile  PLAN_TO_PORT_ASUPERSYNC_TO_ANSI_C.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  perf.yml
docs/: API_DOCUMENTATION_CONTRACT.md  API_ERGONOMICS_VALIDATION.md  API_MISUSE_CATALOG.md  DEFERRED_SURFACES.md  ERROR_STABILITY_POLICY.md  FEATURE_PARITY.md  GUARANTEE_SUBSTITUTION_MATRIX.md  LIFECYCLE_TRANSITION_TABLES.md  OPEN_DECISIONS_ADR.md  PHASE1_SPEC_REVIEW_GATE.md  PROOF_BLOCK_EXCEPTION_WORKFLOW.md  QUALITY_GATES.md  QUIESCENCE_FINALIZATION_INVARIANTS.md  SAFETY_PROFILES.md  SEMANTIC_DELTA_BUDGET.md  TEST_LOG_SCHEMA.md  WAVE_GATING_PROTOCOL.md
include/asx/: asx.h  asx_config.h  asx_ids.h  asx_status.h  portable.h
include/asx/codec/: codec.h  equivalence.h  schema.h
include/asx/core/: adaptive.h  affinity.h  budget.h  cancel.h  channel.h  cleanup.h  ghost.h  outcome.h  resource.h  transition.h
include/asx/runtime/: event.h  hindsight.h  runtime.h  snapshot.h  telemetry.h  trace.h
include/asx/time/: timer_wheel.h
schemas/: test_log.schema.json
src/channel/: mpsc.c
src/core/: adaptive.c  affinity.c  budget.c  cancel.c  cleanup.c  ghost.c  outcome.c  status.c  transition_tables.c
src/platform/freestanding/: hooks.c
src/platform/posix/: hooks.c
src/platform/win32/: hooks.c
src/runtime/: adapter.c  automotive_instrument.c  cancellation.c  codec_internal.h  equivalence.c  hft_instrument.c  hindsight.c  hooks.c  lifecycle.c  parallel.c  quiescence.c  resource.c  runtime_internal.h  scheduler.c  telemetry.c  trace.c  vertical_adapter.c
src/time/: timer_wheel.c
tests/: TEST.md  test_harness.h  test_log.h
tests/bench/: bench_runtime.c
tests/conformance/: codec_json_baseline_test.c
tests/e2e/: automotive_watchdog.sh  codec_parity.sh  continuity.sh  continuity_restart.sh  core_lifecycle.sh  e2e_automotive_watchdog.c  e2e_codec_parity.c  e2e_continuity.c  e2e_continuity_restart.c  e2e_core_lifecycle.c  e2e_hft_microburst.c  e2e_robustness.c  e2e_robustness_endian.c  e2e_robustness_exhaustion.c  e2e_robustness_fault.c  harness.sh  hft_microburst.sh  robustness.sh  robustness_endian.sh  robustness_exhaustion.sh  robustness_fault.sh  test_harness_smoke.sh
tests/fuzz/: fuzz_differential.c  fuzz_minimize.c
tests/invariant/lifecycle/: skeleton_test.c
tests/invariant/model_check/: test_bounded_model.c
tests/unit/channel/: test_mpsc.c
tests/unit/core/: runtime_hooks_test.c  status_basic_test.c  test_adaptive.c  test_budget.c  test_cancel.c  test_cleanup.c  test_endian.c  test_ghost.c  test_hooks.c  test_ids.c  test_outcome.c  test_protothread.c  test_safety_posture.c  test_status.c  test_transition.c
tests/unit/runtime/: test_adapter.c  test_api_misuse.c  test_automotive_fixtures.c  test_cancellation.c  test_codec_json.c  test_continuity.c  test_coroutine.c  test_fault_containment.c  test_hft_instrument.c  test_hft_microburst.c  test_hindsight.c  test_parallel.c  test_scheduler.c  test_scheduler_checker.c  test_stress.c  test_telemetry.c  test_trace.c
tests/unit/time/: test_timer_wheel.c
tests/vignettes/: vignette_budgets.c  vignette_hooks.c  vignette_lifecycle.c  vignette_obligations.c  vignette_replay.c
tools/ci/: check_anti_butchering.sh  check_api_docs.sh  check_evidence_linkage.sh  check_proof_block.sh  check_proof_block_gate.sh  check_semantic_delta_budget.sh  compute_layout_budget_delta.sh  generate_layout_budget_report.sh  matrix_build.sh  portability_check.c  run_codec_equivalence.sh  run_compiler_matrix.sh  run_conformance.sh  run_embedded_matrix.sh  run_evidence_dashboard.sh  run_profile_parity.sh  run_qemu_smoke.sh  run_static_analysis.sh  validate_test_logs.sh
tools/fuzz/: run_smoke.sh
tools/packaging/openwrt/: build_package.sh
